refactoring:
- use Maven standard directory layout for source code

- remove dependency on 3DViewer, by including directly
the 2 needed classes AutoScalingGroup and Xform,
and by using FXyz library for 3D model importing

- make the application modular

- update to use GraalVM 22.0.0.2 version.